# pcm_to_ogg

./: pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/github/pcm_to_ogg/: PcmToOggPlugin.kt
android/src/test/kotlin/com/github/pcm_to_ogg/: PcmToOggPluginTest.kt
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/kotlin/com/github/example/: MainActivity.kt
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  wav_reader.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/: .gitignore
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc
ios/: .gitignore  pcm_to_ogg.podspec
ios/Classes/: PcmToOggPlugin.h  PcmToOggPlugin.m
lib/: pcm_to_ogg.dart  pcm_to_ogg_method_channel.dart  pcm_to_ogg_platform_interface.dart
lib/src/: pcm_to_ogg_platform_interface.dart
lib/src/native/: pcm_to_ogg_native.dart
lib/src/stub/: pcm_to_ogg_stub.dart
lib/src/web/: pcm_to_ogg_web.dart
linux/: CMakeLists.txt  pcm_to_ogg_plugin.cc
macos/: pcm_to_ogg.podspec
macos/Classes/: PcmToOggPlugin.h  PcmToOggPlugin.m
src/: CMakeLists.txt  pcm_to_ogg.c  pcm_to_ogg.h  pcm_to_ogg_android.c
